# todo-app

./: .gitignore  README.md  infra.md
api/: Dockerfile  docker-compose.yml  pyproject.toml
api/app/: auth.py  crud.py  database.py  main.py
api/app/routers/: todo.py
cdk/: package.json
cdk/lib/: cdk-stack.ts
cdk/lib/resource/: apiGateway.ts  dynamo.ts  fargate.ts  vpc.ts
todo-frontend/: globals.d.ts  package.json
todo-frontend/src/common/components/: TopBar.tsx
todo-frontend/src/components/todos/: ToDoCard.tsx  ToDoForm.tsx  ToDoList.tsx
todo-frontend/src/interfaces/: todo.ts
todo-frontend/src/pages/: _app.tsx  index.tsx
todo-frontend/src/pages/api/auth/: [...nextauth].ts
todo-frontend/src/pages/auth/: [...nextauth].ts
todo-frontend/src/types/: next-auth.d.ts
