[tool.poetry]
name = "todo-app-api"
version = "0.1.0"
description = ""
authors = ["eguchidev <shota@eguchi.dev>"]
readme = "README.md"
packages = [{include = "todo_app_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pynamodb = "^6.0.0"
pynamodb-attributes = "^0.4.0"
black = "^24.2.0"
fastapi-cloudauth = "^0.4.3"


[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
max-complexity = 10
